second commit for portfolio web

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </h6>
         </div>
         <div class="pfIMG">
-            <img class="mainimage" src="BO7A1753edit1 copy.png" alt="pic1"></imgsrc>
+            <img class="mainimage" src="IMG_2569.HEIC" alt="pic1"></imgsrc>
         </div>
     </div>
     <ul class="footer">
