changed education, added projects

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         <li><a class="nav-element" href="pages/experience.html">Experience</a></li>
         <li><a class="nav-element" href="pages/education.html">Education</a></li>
     </ul>
+    <h2>Projects</h2>
+    <ul class="projectList">
+        <li><a class="project" href="https://www.gauchoguide.com">Gaucho Guide</a></li>
+        <li><a class="project" href="https://youtu.be/9qYZ4RzamBA">Statux Internship Tracker</a></li>
+    </ul>
     <div class="mainHeader">
         <div class="name">
             <h1>Jayden Udall</h1>
-            <h6>Aspiring computer engineer
+            <h6>Aspiring engineer
                 <br>@ UCSB
             </h6>
         </div>
@@ -25,6 +30,7 @@
             <img class="mainimage" src="IMG_2569.HEIC" alt="pic1"></imgsrc>
         </div>
     </div>
+
     <ul class="footer">
         <li><a class="linkedin" href="https://www.linkedin.com/in/jayden-udall-926716253/">LinkedIn</a></li>       
         <li><a class="github" href="https://github.com/thegreenphoton">GitHub</a></li>
