--- a/pages/education.html
+++ b/pages/education.html
@@ -50,8 +50,8 @@
         <li>
             <img class="ucsbimg" src="../ucsbpw.jpeg"></imgsrc>
             <div class="ucsb"></div>
-            Current junior majoring in Computer Engineering with intent to emphasize on 
-            machine learning/AI while familiarizing myself with the hardware components and computer structure.
+            <br>Major: Computer Engineering, Minor: Statistical Science 
+            <br>Relevant Coursework: machine learning/AI, optimization, computer vision, embedded systems, regression analysis, statistical/probabilistic machine learning, statistical data science, big data analysis 
         </li>
     </ul>
     <ul class="footer">
